objects/License_Snapshot_Change__c.object
<CustomObject>
    <fields>
        <fullName>Change_Date__c</fullName>
        <label>Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Change_Type__c</fullName>
        <label>Change Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Snapshot__c</fullName>
        <label>License Snapshot</label>
        <referenceTo>License_Snapshot__c</referenceTo>
        <relationshipLabel>License Snapshot Changes</relationshipLabel>
        <relationshipName>License_Snapshot_Changes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Non_Perpetual__c</fullName>
        <label>Non Perpetual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Perpetual__c</fullName>
        <label>Perpetual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>License Snapshot Change</label>
    <nameField>
        <displayFormat>LSC-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>License Snapshot Changes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>